fix(menu): 🐛 language card goes off-screen when page title is too long

--- a/resources/skins.citizen.styles/components/Pagetools.less
+++ b/resources/skins.citizen.styles/components/Pagetools.less
@@ -2,6 +2,7 @@
 	display: flex;
 	gap: var( --space-xxs );
 	align-items: center;
+	margin-inline-start: auto;
 
 	// TODO: Merge this with header__item
 	&__item {
